--- a/api/package.json
+++ b/api/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "vercel build --output public"
+    "build": "npm run build --output public"
   },
   "author": "Leonardo Esperança",
   "license": "ISC",
