ajustes vercel api

--- a/api/package.json
+++ b/api/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "node server.js"
+    "start": "node api/index.js"
   },
   "author": "Leonardo Esperança",
   "license": "ISC",
